src/objects/MMCOMPSPROVS__c.object
<CustomObject>
    <description>(MBI) - MMD - Providers - International</description>
    <fields>
        <fullName>Firm_Profile_Link__c</fullName>
        <label>Firm Profile Link</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Providers - Int&apos;l</relationshipLabel>
        <relationshipName>MMD_Providers_Int_l</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROVNAME__c</fullName>
        <label>Provider Firm Name &amp; City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV_PID__c</fullName>
        <label>Provider MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV_TYPE__c</fullName>
        <label>Provider Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <formula>CASE( PROV_TYPE__c,
&quot;aud&quot;,&quot;Auditor&quot;,
&quot;bnk&quot;,&quot;Banker&quot;,
&quot;brk&quot;,&quot;Broker&quot;,
&quot;leg&quot;,&quot;Legal&quot;,
&quot;rgt&quot;,&quot;Registrar&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_HIRED__c</fullName>
        <label>Year Hired</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MMD Provider - Int&apos;l</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Providers - Int&apos;l</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>